add 2 pages client
""

--- a/bmnd/app/src/main/res/values/strings.xml
+++ b/bmnd/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="btnDisconnect">Se déconnecter</string>
     <string name="btnConnect">Se connecter</string>
     <string name="btnCompte">Créer un compte</string>
+    <string name="MonCompte">Mon compte</string>
+    <string name="ModifierMesDonnes">Modifier mes donées</string>
 </resources>
