--- a/bmnd/app/src/main/res/values/strings.xml
+++ b/bmnd/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">bmnd</string>
+    <string name="app_name">Braid me next door</string>
     <string name="btnDisconnect">Se déconnecter</string>
     <string name="btnConnect">Se connecter</string>
-    <string name="btnCompte">Créer un compte</string>
+    <string name="btnCompte"> S\'inscrire</string>
 </resources>
